# hw_python_web_thirteen

./: README.md  docker-compose.yml  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 327fa25666f9_continue.py  3cf34a8e75ab_thrid.py  426aa23c4bfb_check_correct.py  43e0bef1613e_init_again.py  516665c6a1b5_second.py  62bc9fe64737_four.py  9f2e69a5563b_first.py  aa59e900c7b7_start_fastapi.py  ce35537def3d_init.py
postgres-data/base/13481/: pg_internal.init
postgres-data/base/16386/: pg_internal.init
postgres-data/base/16387/: pg_internal.init
postgres-data/global/: 1262  2671  2672  pg_control  pg_internal.init
postgres-data/pg_stat/: db_0.stat  db_13481.stat  db_16386.stat  db_16387.stat  global.stat
src/: schemas.py
src/conf/: config.py  messages.py
src/database/: connector.py  models.py
src/repository/: contacts.py  notes.py  users.py
src/routes/: auth.py  contacts.py  notes.py  users.py
src/services/: auth.py  email.py
src/services/templates/: email_template.html
